--- a/FilmesAPI/appsettings.json
+++ b/FilmesAPI/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "FilmeConnection": "server=localTest;database=filmeTeste; user=***;password = ***"
+    }
+
 }
