--- a/FilmesAPI/appsettings.json
+++ b/FilmesAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "FilmeConnection": "server=localhost;database=filmeTeste; user=root;password = "
+        "FilmeConnection": "server=localhost;database=filmeTeste; user=root;password =** "
     }
 
 }
